--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ go: "1.15.6"
 script: 
   - go test ./cmd/vault/. -v
   - go run . vault new -k ${BS_TOKEN} --url ${BS_URI}
+  - go test ./cmd/vault/. -v
+  - go test ./cmd/squads/. -v
